scripts/nullaway/annotator/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8.txt
../annotator/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/jarjestelija/Jarjestaja.java:29: error: [NullAway] initializer method does not guarantee @NonNull fields ekaPaikka (line 18), ekaKohdePaikka (line 19) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Jarjestaja(Sitsit sitsit) {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/jarjestelija/Jarjestaja.java:38: error: [NullAway] assigning @Nullable expression to @NonNull field
        ekaKohdePaikka = null;
                       ^
    (see http://t.uber.com/nullaway )
../annotator/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/jarjestelija/Jarjestaja.java:96: error: [NullAway] dereferenced expression tokaPaikka is @Nullable
        this.tokaSitsaaja = tokaPaikka.getSitsaaja();
                                      ^
    (see http://t.uber.com/nullaway )
../annotator/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/sitsiplaseeraus/Paikka.java:22: error: [NullAway] initializer method does not guarantee @NonNull fields sitsaaja (line 11), puolisonPaikka (line 13) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Paikka(int poyta, int paikka) {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/sitsiplaseeraus/Sitsaaja.java:28: error: [NullAway] initializer method does not guarantee @NonNull fields avec (line 17), puoliso (line 20), paikka (line 21) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Sitsaaja(String nimi) {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/omatTietorakenteet/Hakemisto.java:47: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/jarjestelija/Optimoija.java:40: error: [NullAway] initializer method does not guarantee @NonNull field vanhatPaikat (line 25) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Optimoija(Sitsit sitsit) {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/Pisteyttaja/PaikanPisteet.java:34: error: [NullAway] initializer method does not guarantee @NonNull fields yhteydet (line 15), kohdePaikka (line 16) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    protected PaikanPisteet(Paikka paikka, Laskin laskin) {
              ^
    (see http://t.uber.com/nullaway )
../annotator/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/Pisteyttaja/PaikanPisteetTest.java:25: error: [NullAway] initializer method does not guarantee @NonNull fields paikka (line 17), pisteet (line 18) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public void setUp() {
                ^
    (see http://t.uber.com/nullaway )
../annotator/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/sitsiplaseeraus/PaikkaTest.java:44: error: [NullAway] dereferenced expression sitsit.getPaikka(3).getMiehenAvecinPaikka() is @Nullable
        assertEquals(-2, sitsit.getPaikka(3).getPaikka() - sitsit.getPaikka(3).getMiehenAvecinPaikka().getPaikka());
                                                                                                      ^
    (see http://t.uber.com/nullaway )
../annotator/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/sitsiplaseeraus/PaikkaTest.java:48: error: [NullAway] dereferenced expression sitsit.getPaikka(3).getNaisenAvecinPaikka() is @Nullable
        assertEquals(2, sitsit.getPaikka(3).getPaikka() - sitsit.getPaikka(3).getNaisenAvecinPaikka().getPaikka());
                                                                                                     ^
    (see http://t.uber.com/nullaway )
../annotator/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/omatTietorakenteet/HashMapTest.java:86: error: [NullAway] dereferenced expression luvut.getAvain(36) is @Nullable
        assertEquals("joku Tyyppi", luvut.getAvain(36).getNimi());
                                                      ^
    (see http://t.uber.com/nullaway )
../annotator/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/Lataaja/AsetustenTulostaja.java:29: error: [NullAway] initializer method does not guarantee @NonNull fields tiedosto (line 19), poytienKoot (line 23) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public AsetustenTulostaja(Sitsit sitsit) {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/Lataaja/TiedostonKasittelija.java:39: error: [NullAway] initializer method does not guarantee @NonNull fields sitsaaja (line 20), tiedot (line 23) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public TiedostonKasittelija(String tiedosto) {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/Lataaja/TiedostonKasittelija.java:153: error: [NullAway] dereferenced expression br is @Nullable
        while ((line = br.readLine()) != null && line.equals("--sitsaajat--") == false) {
                         ^
    (see http://t.uber.com/nullaway )
../annotator/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/Lataaja/TiedostonKasittelija.java:169: error: [NullAway] dereferenced expression br is @Nullable
        while ((line = br.readLine()) != null && line.equals("--avecit--") == false) {
                         ^
    (see http://t.uber.com/nullaway )
../annotator/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/Lataaja/TiedostonKasittelija.java:184: error: [NullAway] dereferenced expression br is @Nullable
        while ((line = br.readLine()) != null && line.equals("--puolisot--") == false) {
                         ^
    (see http://t.uber.com/nullaway )
../annotator/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/Lataaja/TiedostonKasittelija.java:200: error: [NullAway] dereferenced expression br is @Nullable
        while ((line = br.readLine()) != null && line.equals("--yhteydet--") == false) {
                         ^
    (see http://t.uber.com/nullaway )
../annotator/url78d0cbe382_TeeAaTeeUu_SitsiPlaseeraus_tgz-pJ8-sitsiplaseeraus_MainJ8/src/Lataaja/TiedostonKasittelija.java:218: error: [NullAway] dereferenced expression br is @Nullable
        while ((line = br.readLine()) != null) {
                         ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
19 errors
